BPER/DEVF/force-app/main/default/objects/CampaignMember__c/CampaignMember__c.object-meta.xml
<CustomObject>
    <label>CampaignMember Ghost</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>CampaignMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CampaignMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>