BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/Campaign_Member_Link__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+CRM_CampaignMemberId__c,  Name , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Member Link</label>
    <type>Text</type>
</CustomField>