BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CampaignMemberParent__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CampaignMemberParent</label>
    <referenceTo>CampaignMember__c</referenceTo>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>