BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/checkNewExit__c.field-meta.xml
<CustomField>
    <fullName>checkNewExit__c</fullName>
    <formula>Campaign__r.CRM_TipologiaAzione__c =&apos;Dinamica&apos; &amp;&amp; ((DATEVALUE( Data_Uscita__c ) = DATE( YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY())+1))|| (DATEVALUE(Data_Uscita__c) = DATE( YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY()))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>checkNewExit</label>
    <type>Checkbox</type>
</CustomField>