BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CampaignMembers</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>