BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NDG</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CampaignMembers</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>