BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_Assegnatario__c.field-meta.xml
<CustomField>
    <fullName>CRM_Assegnatario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assegnatario</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CampaignMembers (Assegnatario)</relationshipLabel>
    <relationshipName>CampaignMembers1</relationshipName>
    <type>Lookup</type>
</CustomField>