BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_AssegnatarioFormulaId__c.field-meta.xml
<CustomField>
    <fullName>CRM_AssegnatarioFormulaId__c</fullName>
    <formula>IF (
OR (
TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Family&apos;,
TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;POE&apos;,
TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Assente&apos;,
TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Non Portafogliato&apos;),
CRM_AssegnatarioUser__c,
IF(! ISBLANK(CRM_AssegnatarioUser__c),CRM_AssegnatarioUser__c,
IF (
CRM_Account__r.PTF_PortafoglioAssegnato__c,

CRM_Account__r.PTF_Portafoglio__r.CRM_ReferentePortafoglio__r.PTF_User__c,
NULL
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM_AssegnatarioFormulaId</label>
    <type>Text</type>
</CustomField>