BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_AssegnatarioUser__c.field-meta.xml
<CustomField>
    <fullName>CRM_AssegnatarioUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assegnatario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>