BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>CRM_CampaignMemberId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CampaignMemberId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>