BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_CheckNewInsert__c.field-meta.xml
<CustomField>
    <fullName>CRM_CheckNewInsert__c</fullName>
    <formula>Campaign__r.CRM_TipologiaAzione__c =&apos;Dinamica&apos; &amp;&amp; ((DATEVALUE(CreatedDate) = DATE( YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY())-1))|| (DATEVALUE(CreatedDate) = DATE( YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY()))))</formula>
    <label>CheckNewInsert</label>
    <type>Checkbox</type>
</CustomField>