BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_Data_Inserimento__c.field-meta.xml
<CustomField>
    <fullName>CRM_Data_Inserimento__c</fullName>
    <formula>IF( Campaign__r.CRM_TipologiaAzione__c == &quot;Dinamica&quot;, CreatedDate ,NULL)</formula>
    <label>Data Inserimento</label>
    <type>DateTime</type>
</CustomField>