BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_DataEsclusione__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataEsclusione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Esclusione</label>
    <type>DateTime</type>
</CustomField>