BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_Esito__c.field-meta.xml
<CustomField>
    <fullName>CRM_Esito__c</fullName>
    <formula>IF(Status__c == &quot;Sent&quot; || Status__c == &quot;Inviato&quot;, &quot;Da contattare&quot;, Status__c)</formula>
    <label>Esito</label>
    <type>Text</type>
</CustomField>