BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_EsitoCampagna__c.field-meta.xml
<CustomField>
    <fullName>CRM_EsitoCampagna__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Esito Campagna</label>
    <referenceTo>CRM_AssociazioneEsitazioniCampagne__c</referenceTo>
    <relationshipLabel>Campaign Members Ghost</relationshipLabel>
    <relationshipName>CampaignMembersGhost</relationshipName>
    <type>Lookup</type>
</CustomField>