BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_EsitoCampagnaCC__c.field-meta.xml
<CustomField>
    <fullName>CRM_EsitoCampagnaCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Esito Campagna CC</label>
    <referenceTo>CRM_AssociazioneEsitazioniCampagne__c</referenceTo>
    <relationshipLabel>Membri campagna Ghost (Esito Campagna CC)</relationshipLabel>
    <relationshipName>CampaignMembersCCGhost</relationshipName>
    <type>Lookup</type>
</CustomField>