BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_EsitoCampagnaRete__c.field-meta.xml
<CustomField>
    <fullName>CRM_EsitoCampagnaRete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Esito Campagna Rete</label>
    <referenceTo>CRM_AssociazioneEsitazioniCampagne__c</referenceTo>
    <relationshipLabel>Membri campagna (Esito Campagna Rete)</relationshipLabel>
    <relationshipName>CampaignMembersRete</relationshipName>
    <type>Lookup</type>
</CustomField>