BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_IsAffinato__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsAffinato__c</fullName>
    <formula>CRM_Esito__c == &quot;Eliminato&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is affinato</label>
    <type>Checkbox</type>
</CustomField>