BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_IsAssegnatarioUser__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsAssegnatarioUser__c</fullName>
    <formula>IF (
PTF_Portafoglio__r.CRM_User_Referente__c,
PTF_Portafoglio__r.CRM_ReferentePortafoglio__r.PTF_User__r.Id = $User.Id,
CRM_AssegnatarioUser__c = $User.Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assegnatario = User</label>
    <type>Checkbox</type>
</CustomField>