BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_IsCMContattato__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCMContattato__c</fullName>
    <formula>IF( Campaign__r.CRM_TipologiaCampagnaStep__c == &quot;Monostep&quot;, !ISPICKVAL(CRM_EsitoCampagna__r.CRM_TipoEsitazione__c, &quot;Default&quot;) &amp;&amp; !ISBLANK(CRM_EsitoCampagna__c) &amp;&amp;  CRM_EsitoCampagna__r.CRM_NomeEsito__c != &apos;Eliminato&apos;, !ISPICKVAL(CRM_EsitoCampagnaCC__r.CRM_TipoEsitazione__c, &quot;Default&quot;) &amp;&amp; !ISBLANK(CRM_EsitoCampagna__c) &amp;&amp;  CRM_EsitoCampagnaCC__r.CRM_NomeEsito__c != &quot;Eliminato&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is CM contattato (formula)</label>
    <type>Checkbox</type>
</CustomField>