BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_IsCMEsitoPositivo__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCMEsitoPositivo__c</fullName>
    <formula>IF( Campaign__r.CRM_TipologiaCampagnaStep__c == &quot;Monostep&quot;, ISPICKVAL(CRM_EsitoCampagna__r.CRM_TipoEsitazione__c, &quot;Esito Positivo&quot;), ISPICKVAL(CRM_EsitoCampagnaCC__r.CRM_TipoEsitazione__c, &quot;Esito Positivo&quot;) || ISPICKVAL(CRM_EsitoCampagnaRete__r.CRM_TipoEsitazione__c, &quot;Esito Positivo&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS CM esito Positivo (formula)</label>
    <type>Checkbox</type>
</CustomField>