BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_IsCMTarget__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCMTarget__c</fullName>
    <formula>Status__c!= &apos;Eliminato&apos; &amp;&amp; User_Filiale_Account_Filiale__c = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is CM target (formula)</label>
    <type>Checkbox</type>
</CustomField>