BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_NominativoUtente__c.field-meta.xml
<CustomField>
    <fullName>CRM_NominativoUtente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Autore Affinamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>