BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_NoteAffinamento__c.field-meta.xml
<CustomField>
    <fullName>CRM_NoteAffinamento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>