BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_PrioritaContatto__c.field-meta.xml
<CustomField>
    <fullName>CRM_PrioritaContatto__c</fullName>
    <label>Priorità</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bassa</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>