BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_Tipo_Esito__c.field-meta.xml
<CustomField>
    <fullName>CRM_Tipo_Esito__c</fullName>
    <formula>IF(Status__c = &quot;Non contattabile&quot;, &quot;Esito Negativo&quot;, IF(ISBLANK(TEXT(CRM_EsitoCampagnaRete__r.CRM_TipoEsitazione__c )) || TEXT(CRM_EsitoCampagna__r.CRM_TipoEsitazione__c) == &quot;Default&quot;,&quot;Esito Transitorio&quot;, TEXT(CRM_EsitoCampagna__r.CRM_TipoEsitazione__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Esito</label>
    <type>Text</type>
</CustomField>