BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_ValoreAttributo1_Text__c.field-meta.xml
<CustomField>
    <fullName>CRM_ValoreAttributo1_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valore Attributo 1 (stringa)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>