BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_ValoreAttributo2_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_ValoreAttributo2_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valore Attributo 2 (data)</label>
    <type>Date</type>
</CustomField>