BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/CRM_ValoreAttributo2_Number__c.field-meta.xml
<CustomField>
    <fullName>CRM_ValoreAttributo2_Number__c</fullName>
    <label>Valore Attributo 2 (numero)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>