BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/Data_Ingresso__c.field-meta.xml
<CustomField>
    <fullName>Data_Ingresso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Ingresso</label>
    <type>Date</type>
</CustomField>