BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/Data_Uscita__c.field-meta.xml
<CustomField>
    <fullName>Data_Uscita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Uscita</label>
    <type>DateTime</type>
</CustomField>