BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/ID_P3__c.field-meta.xml
<CustomField>
    <fullName>ID_P3__c</fullName>
    <formula>IF((CRM_Esito__c = &apos;Da contattare&apos;),1,
IF((CRM_Esito__c = &apos;Da ricontattare&apos;),2,
IF((CRM_Esito__c = &apos;Fissato appuntamento&apos;),3,
IF((CRM_Esito__c = &apos;Cliente interessato&apos;),4,
IF((CRM_Esito__c = &apos;Cliente non adatto&apos;),5,
IF((CRM_Esito__c = &apos;Cliente non contattabile&apos;),6,
IF((CRM_Esito__c = &apos;Cliente non interessato&apos;),7,
IF((CRM_Esito__c = &apos;Prodotto target venduto&apos;),8,
IF((CRM_Esito__c = &apos;Prodotto venduto&apos;),9,
IF((CRM_Esito__c = &apos;Altro prodotto venduto&apos;),10,99))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID_P3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>