BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/Motivo_Affinamento__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Affinamento__c</fullName>
    <label>Motivo Affinamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profilo non adatto</fullName>
            </value>
            <value>
                <fullName>Dati non Aggiornati</fullName>
            </value>
            <value>
                <fullName>Numerosità elevata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>