BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/Priorita_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Priorita_Campaign_Member__c</fullName>
    <label>ID_P2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>