BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/PTF_Ambito__c.field-meta.xml
<CustomField>
    <fullName>PTF_Ambito__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ambito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>