BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/PTF_idCed__c.field-meta.xml
<CustomField>
    <fullName>PTF_idCed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id Ced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>