BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/PTF_ModelloDiServizio__c.field-meta.xml
<CustomField>
    <fullName>PTF_ModelloDiServizio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modello di servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>