BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/PTF_Portafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_Portafoglio__c</fullName>
    <label>Portafoglio</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>CampaignMembers</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>