BPER/DEVF/force-app/main/default/objects/CampaignMember__c/fields/User_Filiale_Account_Filiale__c.field-meta.xml
<CustomField>
    <fullName>User_Filiale_Account_Filiale__c</fullName>
    <formula>OR(IF(OR(CONTAINS($User.Profilo__c , &apos;NEC_F&apos;), $User.Profilo__c = &apos;NEC_CR&apos;),
   CRM_Account__r.CRM_Filiale__r.PTF_IdCED__c =  $User.idced__c,
			false
			),
			IF(OR( $User.idced__c = &apos;6116&apos;, $User.idced__c = &apos;21025&apos;),
						 TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Key Client Privati&apos;,
						false
						),
			IF( $User.PTF_RuoloLDAP__c = &apos;069&apos;,
						 PTF_Portafoglio__r.Referente_User__c =  $User.Id,
						false
						)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Filiale = Account Filiale</label>
    <type>Checkbox</type>
</CustomField>